js/js.translator/testData/incremental/invalidation/interfaceWithDefaultParams/lib1/l1.6.kt
interface InterfaceA {
    fun functionA(x: Int, s: String = "xy", b: Boolean? = true, i: Int): Int
}
